# src/main/resources/openapi/account-api.yml
@@ -153,6 +153,44 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+  /api/v1/accounts/{id}/deposits:
+    post:
+      tags:
+        - Accounts
+      summary: Deposit money into account
+      operationId: depositAccount
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountDepositRequest'
+      responses:
+        '200':
+          description: Deposit registered successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountResponse'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Account not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
 components:
   schemas:
     AccountRequest:
@@ -231,6 +269,16 @@ components:
         active:
           type: boolean
           example: true
+
+    AccountDepositRequest:
+      type: object
+      required:
+        - amount
+      properties:
+        amount:
+          type: number
+          format: double
+          example: 200.00
 
     ErrorResponse:
       type: object
